--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>star wars trading cards</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>hello world!</h1>
+        <h1>Star Wars Trading Cards</h1>
 
 
         <div id="main"></div>
-
+        
 
         <script src="app.js" async defer></script>
     </body>
