--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Star Wars Trading Cards</h1>
+
+            <div align="center">
+        <h1>Star Wars Stats</h1>
 
 
-        <div id="main"></div>
+        <div class="grid-container" id="main"></div>
 
-
+            </div>
         <script src="app.js" async defer></script>
     </body>
 </html>
